<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/get_new_password"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_18"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/text_intro_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/intro_get_new_password"
        android:lines="2"
        android:textAlignment="center"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_white"
        />

    <RelativeLayout
        android:id="@+id/containerInputPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_below="@+id/text_intro_get"
        android:background="@color/color_white">
        <EditText
            android:id="@+id/text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:drawableLeft="@drawable/ic_cellphone"
            android:background="@drawable/background_text"
            android:drawablePadding="@dimen/dp_20"
            android:drawableStart="@drawable/ic_cellphone"
            android:fontFamily="@string/font_serif"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textAllCaps="false"
            android:paddingEnd="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_5"
            android:paddingStart="@dimen/dp_10"
            android:textColor="@color/color_black"
            android:textColorHint="@color/gray70"
            android:textSize="@dimen/sp_20"
            tools:ignore="UnusedAttribute"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray27"
            android:layout_below="@+id/text_phone_number"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/have_not_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/containerInputPhoneNumber"
        android:layout_centerHorizontal="true"
        android:text="@string/not_have_account"
        android:layout_marginTop="@dimen/dp_50"
        android:textColor="@color/color_white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/have_not_account"
        android:layout_centerHorizontal="true"
        android:paddingRight="@dimen/dp_30"
        android:paddingLeft="@dimen/dp_30"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/register_account"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@string/font_serif"
        android:text="@string/next"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute"
        />
</RelativeLayout>
