<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="vn.needy.vendor.screen.account.AccountViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/ic_back_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/back"
                    android:text="@string/account_setting"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_18" />

                <ImageButton
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/ic_check" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="@dimen/dp_0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray12"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:fontFamily="@string/font_serif"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingTop="@dimen/dp_15"
                    android:text="@string/account"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_10"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/profile_personal"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/bank_account"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:fontFamily="@string/font_serif"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingTop="@dimen/dp_15"
                    android:text="@string/setting"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_10"
                    tools:ignore="UnusedAttribute" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/setting_notifications"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute"
                    android:onClick="@{()->viewModel.onNotificationAccount()}"/>


                <TextView
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/setting_private"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute"
                    android:onClick="@{() -> viewModel.onPersonalInfoSettingClick()}"/>

                <TextView
                    android:onClick="@{() -> viewModel.onAccountBlock()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/block_user"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{()->viewModel.onAcountLanguage()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/language"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:fontFamily="@string/font_serif"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingTop="@dimen/dp_15"
                    android:text="@string/support"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_10"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{() -> viewModel.onAcountSupport()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/support_center"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{() -> viewModel.onAcountTipAndTrick()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/tips_and_tricks"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{()-> viewModel.onAcountCommunity()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/community_standards"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{()->viewModel.onNeedRules()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/needy_rules"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{() -> viewModel.onEvaluationClick()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/vote_needy_app"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{() -> viewModel.onDeleteCacheClick()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/clear_cache"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{() -> viewModel.onDeleteAccountClick()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_0_mid"
                    android:background="@color/color_white"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@drawable/ic_next_right"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/delete_account"
                    android:textAllCaps="false"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:onClick="@{()->viewModel.onAcountLogout()}"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_35"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/button_red"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/color_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="@dimen/dp_10"
                    android:fontFamily="@string/font_serif"
                    android:padding="@dimen/dp_10"
                    android:text="@string/app_version"
                    android:textAllCaps="false"
                    android:textColor="@color/gray50"
                    android:textSize="@dimen/sp_12"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
